--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
           <form action="https://api.web3forms.com/submit" method="POST">
             <input
               type="hidden"
-              name="access_key"
-              value="d543ad61-1621-4675-9967-06c719877435"
+              name="gitaccess_key"
+              value="363a4993-51b4-40c8-9f88-3d8a2677cbfb"
             />
             <div class="input-control">
               <label>first-name</label>
